--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 Django==4.2.7
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
+dj-database-url==2.1.0
 
 # Django REST Framework
 djangorestframework==3.14.0
