--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,27 @@
 # Django y Base de Datos
-Django==4.2.7
+Django==4.2.16
 psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-dj-database-url==2.1.0
+python-dotenv==1.0.1
+dj-database-url==2.2.0
 
 # Django REST Framework
-djangorestframework==3.14.0
+djangorestframework==3.15.2
 djangorestframework-gis==1.0
 
 # CORS
-django-cors-headers==4.3.1
+django-cors-headers==4.4.0
 
 # Archivos estáticos
-whitenoise==6.6.0
+whitenoise==6.7.0
 
 # Imágenes
-Pillow==10.1.0
+Pillow==11.0.0
 
 # Utilidades
 python-decouple==3.8
+
+# Servidor WSGI para producción
+gunicorn==23.0.0
 
 # Desarrollo y Testing (opcionales)
 # django-debug-toolbar==4.2.0
